# RealWinAI

./: .env.example  .env.production  .gitignore  DEPLOYMENT_GUIDE.md  DEV_USER_SETUP.md  Dockerfile  FREE_DEPLOYMENT_OPTIONS.md  PRODUCTION_SETUP_COMPLETE.md  Procfile  QUICK_DEPLOY.md  RAILWAY_DEPLOYMENT.md  README.md  SUBSCRIPTION_DISABLED.md  check_deployment.py  deploy-railway.bat  deploy.bat  deploy_railway.md  pyproject.toml  pytest.ini  railway.toml  railway_deploy_commands.sh  render.yaml  requirements.txt  start.sh  vercel.json  wsgi.py
.do/: app.yaml
.vercel/: project.json
api/: index.py  main.py  requirements.txt
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/.github/workflows/: deploy.yml  develop.yml
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useChatSession.ts  useGreetingNotification.ts  useLocationPricing.ts
frontend/src/lib/: api.ts  auth.ts  config.ts
frontend/src/pages/: AdminJobs.tsx  AdminPredictions.tsx  Analytics.tsx  Billing.tsx  Chatbot.tsx  CricketDetails.tsx  CricketPredictions.tsx  FootballAnalysis.tsx  FootballPredictions.tsx  ForgotPassword.tsx  Index.tsx  Login.tsx  MatchAnalysis.tsx  NotFound.tsx  PaymentSuccess.tsx  ResetPassword.tsx  Settings.tsx  Signup.tsx  StrategySetup.tsx  StripePayment.tsx  Subscription.tsx  TrackRecord.tsx  UserSubscriptions.tsx
jobs/: config.py  main.py  matches.json  output  result
jobs/helper/: cricket.py  cricket_prediction.py  cricket_tournaments.py  eye_button_summary.py  football.py  football_prediction.py  football_util.py  output  prediction.py
jobs/helper/cricket_new_updates/: ai_summary.py  api_token.py  config.py  data_fetchers.py  (+5 more)
pipeline/: Makefile  samconfig.toml  template.yaml
pipeline/cricket/: main.py  requirements.txt
pipeline/script/: main.py  requirements.txt
scripts/: create_dev_user.py  deploy.sh  pythonanywhere_deploy.sh  webhook_manager.py
source/: __init__.py  main.py
source/core/: database.py  mailer.py  request_utils.py  routers.py  security.py  settings.py
source/migrations/: env.py
static/: chat.html
templates/emails/: footer.html  reset_password.html
(+158 files in other folders)
